quorum/test/tests/TypeChecker/Fail/ExpAssignBoolObjNumObj.quorum
Number num
num:setValue(5.5)
Boolean bool = cast(Boolean, num)